# FocusTime

./: README.md
focustime/: LICENSE  README.rst  focustime.py  pyproject.toml  segment.py  segmenttrackerbox.py
focustime/models/: segment.py  session.py
focustime/src/focustime/: __main__.py  app.py  segment.py  segmenttrackerbox.py
focustime/src/focustime.dist-info/: METADATA
focustime/src/focustime/tests/: __main__.py  apptest.py  segmenttest.py
focustime/views/: segmenttrackerbox.py
tests/: segmenttest.py  test_segment.py  test_session.py
