[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "FocusTime"
bundle = "com.technopraxia"
version = "0.0.1"
url = "https://technopraxia.com/focustime"
license = "BSD license"
author = 'Igor Siemienowicz'
author_email = "igor@qprise.com"

[tool.briefcase.app.focustime]
formal_name = "FocusTime"
description = "Time-keeping for people who need to focus"
icon = "src/focustime/resources/focustime"
sources = ['src/focustime']
requires = []


[tool.briefcase.app.focustime.macOS]
requires = [
    'toga-cocoa>=0.3.0.dev18',
]

[tool.briefcase.app.focustime.linux]
requires = [
    'toga-gtk>=0.3.0.dev18',
]

[tool.briefcase.app.focustime.windows]
requires = [
    'toga-winforms>=0.3.0.dev18',
]

# Mobile deployments
[tool.briefcase.app.focustime.iOS]
requires = [
    'toga-iOS>=0.3.0.dev18',
]

[tool.briefcase.app.focustime.android]
requires = [
    'toga-android>=0.3.0.dev18',
]
